# ccollection

./: .gitignore  .syntastic_c_config  .syntastic_cpp_config  CMakeLists.txt  README.md  build  index.html  params.json  runtest
benchmark/: CMakeLists.txt  vector.cpp
include/: ccollection-internal.h  ccollection.h  vector.h
src/: CMakeLists.txt  ccollection.c  vector.c
test/: CMakeLists.txt  test_ccollection.cpp  test_main.cpp  test_vector.cpp
